tests/anp_with_banp_pass_test/anps.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-example-with-banp
spec:
  priority: 10
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ns1
      podSelector:
        matchLabels:
          app: a-app
  ingress:
  - name: "allow-tcp-80-from-ns2-pod1" 
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        port: 80
        protocol: TCP
  - name: "pass-tcp81-udp80-81-conns-from-ns2-pod1"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        protocol: UDP
        port: 80
    - portNumber:
        protocol: UDP
        port: 81
    - portNumber:
        protocol: TCP
        port: 81
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ns1
      podSelector:
        matchLabels:
          app: a-app
  ingress:
  - name: "deny-udp-80-from-ns2-pod1"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        port: 80
        protocol: UDP
  - name: "allow-udp-81-from-ns2-pod1"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ns2
        podSelector:
          matchLabels:
            app: a-app
    ports:
    - portNumber:
        port: 81
        protocol: UDP
---
