tests/anp_with_banp_pass_test/pods.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod1
  namespace: ns1
  labels:
    app: a-app
spec:
  selector:
    matchLabels:
      app: a-app
  template:
    metadata:
      labels:
        app: a-app
    spec:
      containers:
      - name: ns1
        image: quay.io/shfa/ns1:latest
        ports:
        - containerPort: 80
        - containerPort: 81  
        - containerPort: 80
          protocol: UDP
        - containerPort: 81
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod1
  namespace: ns2
  labels:
    app: a-app
spec:
  selector:
    matchLabels:
      app: a-app
  template:
    metadata:
      labels:
        app: a-app
    spec:
      containers:
      - name: ns2
        image: quay.io/shfa/ns2:latest
        ports:
        - containerPort: 80
        - containerPort: 81  
        - containerPort: 80
          protocol: UDP
        - containerPort: 81
          protocol: UDP  
---
